--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/src/App.tsx" }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
   }
   
